 - GB Serialize: Fix game title check
 - GB: Revamp IRQ handling based on new information
 - GBA Video: Don't mask out high bits of BLDY (fixes mgba.io/i/899)
 - GBA Video: Force align 256-color tiles
 - GBA DMA: ROM reads are forced to increment
 - GB Video: Fix loading states while in mode 3
 - GB Video: Only trigger STAT write IRQs when screen is on (fixes mgba.io/i/912)
Misc:
 - GBA Timer: Use global cycles for timers
 - GBA: Extend oddly-sized ROMs to full address space (fixes mgba.io/i/722)
 - All: Make FIXED_ROM_BUFFER an option instead of 3DS-only
 - Qt: Redo GameController into multiple classes
 - Test: Restructure test suite into multiple executables
 - Python: Integrate tests from cinema test suite
 - Util: Don't build crc32 if the function already exists
 - GBA: Implement display start DMAs
 - Qt: Prevent window from being created off-screen

0.6.1: (2017-10-01)
Bugfixes:
 - GB, GBA: Fix crashes when attempting to identify null VFiles
 - GB, GBA: Fix sync to video with frameskip
 - GB, GBA Savedata: Fix savestate-related save overwriting (fixes mgba.io/i/834)
 - GB Audio: Fix NRx2 writes while active (fixes mgba.io/i/866)
 - GB Core: Fix palette loading when loading a foreign config
 - GB MBC: Pocket Cam memory should be accessible without enabling
 - GB MBC: Fix SRAM sizes 4 and 5
 - GB MBC: Fix RTC initialization (fixes mgba.io/i/825)
 - GB MBC: Fix RTC loading when file size is off
 - GB Memory: Initialize peripheral pointers
 - GB Memory: Prevent accessing empty SRAM (fixes mgba.io/i/831)
 - GB Memory: Fix HDMA count starting in mode 0 (fixes mgba.io/i/855)
 - GB Memory: Actually load latch time from savestate
 - GB Serialize: Fix deserializing video STAT
 - GB Video: Fix 16-bit screenshots (fixes mgba.io/i/826)
 - GB Video: Fix potential hang when ending mode 0
 - GB Video: Fix read mode when enabling LCD
 - GBA: Reset active region as needed when loading a ROM
 - GBA: Fix keypad IRQs not firing when extra buttons are pressed